# watchqueue

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: __init__.py  config.py  database.py  main.py
app/models/: __init__.py  auth.py  queue_item.py  reaction.py  room.py  vote.py  watch_history.py
app/routers/: __init__.py  auth.py  queue.py  rooms.py  sse.py  voting.py  websocket.py
app/services/: __init__.py  auth.py  external_api.py  history.py  queue.py  reactions.py  rooms.py  selection.py  voting.py
app/utils/: __init__.py  helpers.py
docs/: future-features.md
scripts/: backfill_queue_providers.py  backfill_room_admins.py
static/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_auth.py  test_external_api.py  test_history.py  test_queue.py  test_rooms.py  test_selection.py  test_voting.py
